Use cnp-java-base image